# adventofcode-rs

./: ARCHITECTURE.md  Cargo.toml  README.md  dayXX-template.rs
inputs/2020/: 4-part1.challenge  8-part2.challenge
src/: main.rs  puzzle.rs
src/aoc2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
