[package]
name = "aoc"
version = "0.1.0"
authors = ["Fabien <45664395+fimbault@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
curl = "0.4.36"
anyhow = "1.0"
regex = "1.4.5" 
lazy_static = "1.4.0"